--- a/CareDirection/CareDirection/Resources/Storyboard/SurveyInfo.storyboard
+++ b/CareDirection/CareDirection/Resources/Storyboard/SurveyInfo.storyboard
@@ -66,7 +66,7 @@
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <state key="selected">
-                                    <color key="titleColor" red="0.0" green="0.6470588235294118" blue="1" alpha="0.40000000000000002" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <color key="titleColor" red="0.0" green="0.6470588235294118" blue="0.6588235294117647" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
                                     <action selector="maleBtnSelected:" destination="jeu-gT-Rol" eventType="touchUpInside" id="66m-PM-VI1"/>
@@ -119,6 +119,13 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="arrowIcUnselected" translatesAutoresizingMaskIntoConstraints="NO" id="E5S-Go-5jR">
+                                        <rect key="frame" x="255" y="15" width="23" height="12"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="12" id="3oO-RN-TpE"/>
+                                            <constraint firstAttribute="width" constant="23" id="kev-Ub-OBi"/>
+                                        </constraints>
+                                    </imageView>
                                 </subviews>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -127,6 +134,8 @@
                                     <constraint firstAttribute="width" secondItem="TBZ-jC-rfV" secondAttribute="height" multiplier="295:42" id="Ett-h0-jFu"/>
                                     <constraint firstItem="2VL-5n-mtp" firstAttribute="top" secondItem="TBZ-jC-rfV" secondAttribute="top" id="KHh-AT-vtc"/>
                                     <constraint firstAttribute="bottom" secondItem="2VL-5n-mtp" secondAttribute="bottom" id="UIB-TI-Udn"/>
+                                    <constraint firstAttribute="trailing" secondItem="E5S-Go-5jR" secondAttribute="trailing" constant="17" id="Yov-IU-VCp"/>
+                                    <constraint firstItem="E5S-Go-5jR" firstAttribute="centerY" secondItem="TBZ-jC-rfV" secondAttribute="centerY" id="fUZ-Sg-2nA"/>
                                     <constraint firstAttribute="trailing" secondItem="2VL-5n-mtp" secondAttribute="trailing" id="ivh-jb-wR9"/>
                                 </constraints>
                             </view>
@@ -162,6 +171,7 @@
                         <viewLayoutGuide key="safeArea" id="med-2W-nJi"/>
                     </view>
                     <connections>
+                        <outlet property="arrowImg" destination="E5S-Go-5jR" id="bKB-bb-1Se"/>
                         <outlet property="femaleBtn" destination="A4V-tC-oKC" id="jOI-J5-N52"/>
                         <outlet property="maleBtn" destination="e6l-kB-l3b" id="Rrc-1m-i53"/>
                         <outlet property="nameLbl" destination="tlR-zp-cEU" id="Z51-EU-12L"/>
@@ -177,6 +187,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="arrowIcUnselected" width="23" height="12"/>
         <image name="bg" width="375" height="667"/>
     </resources>
 </document>
