[CREATE] Product Detail View

--- a/CareDirection/CareDirection/Resources/Storyboard/Product.storyboard
+++ b/CareDirection/CareDirection/Resources/Storyboard/Product.storyboard
@@ -193,6 +193,7 @@
                                             </subviews>
                                             <constraints>
                                                 <constraint firstItem="6Xb-R1-tzw" firstAttribute="leading" secondItem="IHw-dN-tKe" secondAttribute="trailing" id="0Gq-fs-FPN"/>
+                                                <constraint firstAttribute="trailing" secondItem="axm-bo-FkS" secondAttribute="trailing" constant="18" id="3hl-0R-eiL"/>
                                                 <constraint firstAttribute="trailingMargin" secondItem="Ldc-r3-sKZ" secondAttribute="trailing" constant="3" id="F5g-f6-8BX"/>
                                                 <constraint firstItem="IHw-dN-tKe" firstAttribute="leading" secondItem="axm-bo-FkS" secondAttribute="leading" id="P02-T2-jak"/>
                                                 <constraint firstItem="U7W-uK-xlm" firstAttribute="top" secondItem="6NZ-yR-X5b" secondAttribute="top" id="Peq-Y2-xkT"/>
